--- a/index.travas.html
+++ b/index.travas.html
@@ -4,21 +4,6 @@
 <meta charset="UTF-8" />
 <title>CB Systems • Painel de Travas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<!-- [AUTH] carrega a configuração central (URLs + helpers de sessão/fetch) -->
-<script src="config.js"></script>
-
-<!-- [AUTH] guarda de sessão: valida token no servidor (sem CORS/preflight) -->
-<script>
-  (async ()=>{
-    try {
-      await AUTH.ensure(); // redireciona p/ login se não houver sessão válida
-    } catch(e) {
-      // AUTH.ensure já redireciona; isto aqui evita erro no console
-    }
-  })();
-</script>
-
 <style>
   :root{
     --bg:#f6f8fb; --ink:#0f172a; --muted:#64748b; --card:#fff; --primary:#0ea5e9; --shadow:0 1px 8px rgba(0,0,0,.06);
@@ -147,8 +132,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 /* ======= CONFIG ======= */
-/* [API] troca URL fixa pelo config.js */
-const API_BASE = API_URLS.travas; // definido no config.js
+const API_BASE='https://script.google.com/macros/s/AKfycbyDGQ-srD7OFMORoRo7ZH2BDaz_tJVVlsqjdlLTI0OpkEKv3tQ5Ny02h3blo7GKjsFEIw/exec';
 const EMPRESAS=['MERCATTO DELICIA','DELICIA GOURMET','VILLA GOURMET','M. KIDS','PADARIA DELICIA'];
 
 /* ======= PLANOS VÁLIDOS (para soma "Fornecedores") ======= */
@@ -228,7 +212,7 @@ function extractPlanos(rec){
   return [];
 }
 
-/* Fetch com timeout + retry leve (fallback) */
+/* Fetch com timeout + retry leve */
 async function fetchWithTimeout(url, { timeout=12000, retries=1 } = {}){
   for(let i=0;i<=retries;i++){
     const ctrl=new AbortController();
@@ -245,27 +229,12 @@ async function fetchWithTimeout(url, { timeout=12000, retries=1 } = {}){
   }
 }
 
-/* API (agora autenticada) */
+/* API */
 async function getEmpresaPeriodo(emp, periodo){
   const c=getC(emp,periodo); if(c) return c;
-
-  // [API] preferir authGet (token + origin). Se não existir (ex.: ambiente antigo),
-  // cai no fetch clássico com query string.
-  let text;
-  const params = { empresa: emp };
-  if (periodo) params.periodo = periodo;
-
-  if (typeof authGet === 'function' && API_BASE) {
-    const r = await authGet('travas', params);
-    if (!r.ok) throw new Error('Falha ao carregar');
-    text = await r.text();
-  } else {
-    const qs = new URLSearchParams(params).toString();
-    const url = `${API_BASE}?${qs}`;
-    text = await fetchWithTimeout(url,{timeout:12000,retries:1});
-  }
-
-  let j; try{ j=JSON.parse(text); }catch{ throw new Error('JSON inválido'); }
+  const url=`${API_BASE}?empresa=${encodeURIComponent(emp)}${periodo?`&periodo=${encodeURIComponent(periodo)}`:''}`;
+  const t=await fetchWithTimeout(url,{timeout:12000,retries:1});
+  let j; try{j=JSON.parse(t);}catch{throw new Error('JSON inválido');}
   let rec=j;
   if(j?.empresa) rec=j;
   else if(Array.isArray(j?.data)) rec=j.data.find(x=>norm(x.empresa||x.Empresa)===norm(emp))||j.data[0];
@@ -389,6 +358,7 @@ async function openComparativoPlano(planoNome, periodo){
         datasets: [{
           label: `Valor do plano — ${planoNome}`,
           data: valores
+          // sem cores específicas (segue padrão)
         }]
       },
       options: {
@@ -423,12 +393,6 @@ async function openComparativoPlano(planoNome, periodo){
 }
 
 /* Eventos filtros */
-const selEmpresa=document.getElementById('empresa');
-const inpPeriodo=document.getElementById('periodo');
-const container=document.getElementById('content');
-let ChartLib=null;
-let currentRun = 0;
-
 selEmpresa.addEventListener('change', run);
 inpPeriodo.addEventListener('change', run);
 
