--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -3,16 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-  <!-- [AUTH] config central: define API_URLS, AUTH.ensure, authGet -->
-  <script src="config.js"></script>
-  <script>
-    // [AUTH] guarda de sessão (redireciona pro login se não tiver token válido)
-    (async ()=>{
-      try { await AUTH.ensure(); } catch(e) {}
-    })();
-  </script>
-
   <title>Resumo de Entradas</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -145,11 +135,7 @@
 </div>
 
 <script>
-// [API] centralizado via config.js, com fallback pra URL antiga só pra desenvolvimento
-const API_ENTRADAS = (typeof API_URLS!=='undefined' && API_URLS.entradas)
-  ? API_URLS.entradas
-  : 'https://script.google.com/macros/s/AKfycbz9GQLrIB4oiX0jBQ7yaDO_IiMz3ER7lQT094sp5y2VUGgQWBaz3G1fa7s4ZbiWli_O/exec';
-
+const url = 'https://script.google.com/macros/s/AKfycbz9GQLrIB4oiX0jBQ7yaDO_IiMz3ER7lQT094sp5y2VUGgQWBaz3G1fa7s4ZbiWli_O/exec';
 const emojis = {
   "DINHEIRO": "💵", "CRÉDITO": "💳", "DÉBITO": "🏦", "PIX": "💲",
   "ONLINE": "💻", "CREDIÁRIO": "📋", "VOUCHER": "🎫", "BONIFICAÇÃO": "🎁",
@@ -160,7 +146,7 @@ const emojis = {
 let dados = [];
 
 window.onload = () => {
-  const hoje = new Date();
+  const hoje = new Date(); // usa a data real do navegador
   const ontem = new Date(hoje);
   ontem.setDate(hoje.getDate() - 1);
   const dataFormatada = ontem.toISOString().split('T')[0];
@@ -169,35 +155,20 @@ window.onload = () => {
   carregarDados();
 };
 
-async function carregarDados() {
-  try{
-    // [API] usa authGet, se disponível (envia Authorization Bearer + origin)
-    let res;
-    if (typeof authGet === 'function' && typeof API_URLS !== 'undefined') {
-      res = await authGet('entradas'); // GET simples, sem params
-      if (!res.ok) throw new Error('Falha ao carregar');
-      dados = await res.json();
-    } else {
-      // fallback (sem auth) — útil no dev/local
-      const resposta = await fetch(API_ENTRADAS);
-      dados = await resposta.json();
-    }
 
-    const empresas = [...new Set(dados.map(item => item.Empresa))].sort();
-    const select = document.getElementById("empresaFiltro");
-    select.innerHTML = '<option value="">Todas</option>';
-    empresas.forEach(emp => {
-      const option = document.createElement("option");
-      option.value = emp;
-      option.textContent = emp;
-      select.appendChild(option);
-    });
-    aplicarFiltro();
-  }catch(e){
-    document.getElementById('painel').innerHTML =
-      "<p style='text-align:center;color:#b91c1c'>Não foi possível carregar os dados agora.</p>";
-    console.error(e);
-  }
+async function carregarDados() {
+  const resposta = await fetch(url);
+  dados = await resposta.json();
+  const empresas = [...new Set(dados.map(item => item.Empresa))].sort();
+  const select = document.getElementById("empresaFiltro");
+  select.innerHTML = '<option value="">Todas</option>';
+  empresas.forEach(emp => {
+    const option = document.createElement("option");
+    option.value = emp;
+    option.textContent = emp;
+    select.appendChild(option);
+  });
+  aplicarFiltro();
 }
 
 function aplicarFiltro() {
