--- a/index.html
+++ b/index.html
@@ -4,110 +4,182 @@
   <meta charset="UTF-8">
   <title>Análise Financeira</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <!-- Configs globais (DEFINE window.CONFIG.WEBAPP) -->
-  <script src="config.js"></script>
-
-  <!-- Guard de autenticação -->
-  <script>
-    (async ()=>{
-      function goLogin(){
-        const next = (location.pathname.split('/').pop() || 'index.html');
-        location.replace('login.html?next=' + encodeURIComponent(next)); // não deixa voltar
-      }
-      const WEBAPP = (window.CONFIG && window.CONFIG.WEBAPP);
-      if(!WEBAPP){ console.error('CONFIG.WEBAPP não definido'); goLogin(); return; }
-
-      const token = localStorage.getItem('auth_token');
-      if(!token){ goLogin(); return; }
-
-      try{
-        // usa text/plain pra evitar preflight
-        const r = await fetch(`${WEBAPP}?fn=me`, {
-          method: 'POST',
-          headers: { 'Content-Type':'text/plain;charset=UTF-8' },
-          body: JSON.stringify({ token })
-        });
-        const raw = await r.text();
-        let j; try{ j = JSON.parse(raw); }catch{ goLogin(); return; }
-        if(!j.ok){ localStorage.clear(); goLogin(); return; }
-        window.AUTH_USER = j.user;
-      }catch{ goLogin(); }
-    })();
-
-    // Bloqueia o botão voltar neste painel
-    (function lockBack(){
-      const push = ()=> history.pushState(null, '', location.href);
-      push();
-      window.addEventListener('popstate', ()=> push());
-    })();
-  </script>
-
   <style>
-    :root{
-      --ink:#2c3e50;
-      --card:#fff;
-      --hover:#f5fbff;
-      --shadow:0 4px 10px rgba(0,0,0,.08);
-      --shadow-zoom:0 10px 24px rgba(0,0,0,.16);
-    }
-    *{box-sizing:border-box}
-    body { margin:0; font-family:'Segoe UI',system-ui,-apple-system,sans-serif; background:#fff; color:var(--ink); }
-
-    #splash{
-      position:fixed; inset:0; background:#fff; display:flex; align-items:center; justify-content:center;
-      z-index:9999; transition:opacity .5s ease;
-    }
-    #splash img{ width:150px; animation:pulse 1.5s infinite }
-    @keyframes pulse{ 0%{transform:scale(1);opacity:1} 50%{transform:scale(1.05);opacity:.9} 100%{transform:scale(1);opacity:1} }
-
-    header{
-      background:#fff; padding:20px 16px; display:flex; align-items:center; border-bottom:1px solid #e5e7eb;
-      gap:12px; flex-wrap:wrap;
-    }
-    .logo-left img{ height:56px; width:auto }
-    .title-center{ flex:1 1 auto }
-    .title-center h1{ margin:0; font-size:22px; font-weight:700 }
-    .spacer{ margin-left:auto; display:flex; align-items:center; gap:12px }
-    .relatorio-link{ text-decoration:none; font-size:22px; opacity:.6; transition:opacity .25s }
-    .relatorio-link:hover{ opacity:1 }
-    .user-profile img{
-      width:36px;height:36px;border-radius:50%;object-fit:cover;border:2px solid #ccc;transition:transform .2s ease
-    }
-    .user-profile img:hover{ transform:scale(1.08); border-color:#2980b9 }
-
-    .container{
-      display:grid; grid-template-columns:repeat(3,1fr); gap:16px; padding:20px; max-width:1200px; margin:auto;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: white;
     }
 
-    /* ✅ 2 cards por linha no celular */
-    @media (max-width:700px){
-      .container{ grid-template-columns:repeat(2,minmax(0,1fr)); gap:12px; padding:14px }
-      header{ padding:14px }
-      .title-center h1{ font-size:20px }
+    #splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.5s ease;
     }
 
-    .card{
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-      background:var(--card); border-radius:12px; padding:22px 12px; text-align:center; box-shadow:var(--shadow);
-      text-decoration:none; color:inherit; min-height:110px; user-select:none;
-      transition:transform .18s cubic-bezier(.2,.7,.3,1), box-shadow .18s cubic-bezier(.2,.7,.3,1), background-color .18s;
-      transform-origin:center;
-      will-change:transform, box-shadow;
-    }
-    .card:hover{ background:var(--hover) }
-    .card h2{ margin:6px 0 0; font-size:16px; line-height:1.25; word-break:break-word }
-    .card .icon{ font-size:30px; color:#2980b9; }
-
-    /* Estado de zoom ao clicar */
-    .card.is-zoom{
-      transform:scale(1.05);
-      box-shadow:var(--shadow-zoom);
+    #splash img {
+      width: 150px;
+      animation: pulse 1.5s infinite;
     }
 
-    /* Acessibilidade: reduz animação */
-    @media (prefers-reduced-motion: reduce){
-      .card, .card.is-zoom{ transition:none }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 0.9; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    header {
+      background-color: white;
+      color: #2c3e50;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .logo-left {
+      flex: 1;
+      display: flex;
+      align-items: center;
+    }
+
+    .logo-left img {
+      height: 60px;
+    }
+.user-profile {
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.user-profile img {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
+  transition: transform 0.2s ease;
+}
+
+.user-profile img:hover {
+  transform: scale(1.1);
+  border-color: #2980b9;
+}
+
+    .title-left {
+  flex: 2;
+  text-align: left;
+}
+
+.title-left h1 {
+  font-size: 24px;
+  margin: 0;
+  font-weight: bold;
+}
+
+
+    .spacer {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .relatorio-link {
+      text-decoration: none;
+      font-size: 22px;
+      opacity: 0.5;
+      cursor: pointer;
+      transition: opacity 0.3s;
+    }
+
+    .relatorio-link:hover {
+      opacity: 1;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      padding: 30px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      background-color: #f0f8ff;
+    }
+
+    .card h2 {
+      margin: 0;
+      font-size: 20px;
+      color: #2c3e50;
+    }
+
+    .icon {
+      font-size: 40px;
+      color: #2980b9;
+      margin-bottom: 10px;
+    }
+
+    @media (max-width: 500px) {
+  header {
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+  }
+
+  .logo-left {
+    display: none;
+  }
+
+  .title-center {
+    flex: none;
+    width: 100%;
+  }
+
+  .spacer {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .card h2 {
+    font-size: 18px;
+  }
+
+  .icon {
+    font-size: 32px;
+  }
+
+      .card h2 {
+        font-size: 18px;
+      }
+
+      .icon {
+        font-size: 32px;
+      }
     }
   </style>
 </head>
@@ -127,52 +199,66 @@
       <h1>Análise Financeira</h1>
     </div>
     <div class="spacer">
-      <a href="index.relatorios.html" class="relatorio-link" title="Relatório Consolidado">📄</a>
-      <a href="perfil.html" title="Perfil do Usuário" class="user-profile">
-        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Usuário" />
-      </a>
-    </div>
+  <a href="index.relatorios.html" class="relatorio-link" title="Relatório Consolidado">📄</a>
+  <a href="perfil.html" title="Perfil do Usuário" class="user-profile">
+    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Usuário" />
+  </a>
+</div>
+
   </header>
 
   <!-- Cards -->
-  <div class="container" id="cards">
-    <a class="card" href="index.resumofinanceiro.html"><div class="icon">📈</div><h2>Resumo Financeiro</h2></a>
-    <a class="card" href="index.cancelamentos.html"><div class="icon">❌</div><h2>Cancelamentos</h2></a>
-    <a class="card" href="index.delivery.html"><div class="icon">🚚</div><h2>Vendas Delivery</h2></a>
-    <a class="card" href="index.meta.html"><div class="icon">📊</div><h2>Meta de Faturamento</h2></a>
-    <a class="card" href="index.travas.html"><div class="icon">🔒</div><h2>Travas</h2></a>
-    <a class="card" href="index.conciliacao.html"><div class="icon">💳</div><h2>Conciliações</h2></a>
-    <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html"><div class="icon">✅</div><h2>Aprovação de CAP</h2></a>
-    <a class="card" href="index.abc.html"><div class="icon">ABC</div><h2>ABC de Vendas</h2></a>
-    <a class="card" href="index.avaliacoes.html"><div class="icon">🔎</div><h2>Pesquisa de satisfação</h2></a>
+  <div class="container">
+    <a class="card" href="index.resumofinanceiro.html">
+      <div class="icon">📈</div>
+      <h2>Resumo Financeiro</h2>
+    </a>
+
+    <a class="card" href="index.cancelamentos.html">
+      <div class="icon">❌</div>
+      <h2>Cancelamentos</h2>
+    </a>
+
+    <a class="card" href="index.delivery.html">
+      <div class="icon">🚚</div>
+      <h2>Vendas Delivery</h2>
+    </a>
+
+    <a class="card" href="index.meta.html">
+      <div class="icon">📊</div>
+      <h2>Meta de Faturamento</h2>
+    </a>
+   <a class="card" href="index.travas.html">
+      <div class="icon">🔒</div>
+      <h2>Travas</h2>
+    </a>
+    <a class="card" href="index.conciliacao.html">
+      <div class="icon">💳</div>
+      <h2>Conciliações</h2>
+    </a>
+
+   <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html">
+  <div class="icon">✅</div>
+  <h2>Aprovação de CAP</h2>
+  </a>
+  <a class="card" href="index.abc.html">
+      <div class="icon">ABC</div>
+      <h2>ABC de Vendas</h2>
+    </a>
+  <a class="card" href="index.avaliacoes.html">
+      <div class="icon">🔎</div>
+      <h2>Pesquisa de satisfação</h2>
+    </a>
   </div>
 
-  <!-- Splash fade + zoom ao clicar -->
+  <!-- Script splash -->
   <script>
-    // Splash
-    window.addEventListener('load', ()=>{
+    window.addEventListener('load', () => {
       const splash = document.getElementById('splash');
-      setTimeout(()=>{ splash.style.opacity='0'; setTimeout(()=> splash.style.display='none', 450); }, 900);
-    });
-
-    // Zoom ao clicar e depois navega
-    document.querySelectorAll('.card').forEach(a=>{
-      a.addEventListener('click', (ev)=>{
-        // evita múltiplos cliques
-        if(a.classList.contains('is-zoom')) return;
-        ev.preventDefault();
-        const href = a.getAttribute('href');
-        a.classList.add('is-zoom');
-        // garante que a animação apareça antes da navegação
-        setTimeout(()=>{ window.location.href = href; }, 160);
-      });
-      // acessibilidade teclado
-      a.addEventListener('keydown', (e)=>{
-        if(e.key === 'Enter' || e.key === ' '){
-          e.preventDefault();
-          a.click();
-        }
-      });
+      setTimeout(() => {
+        splash.style.opacity = '0';
+        setTimeout(() => splash.style.display = 'none', 500);
+      }, 1000);
     });
   </script>
 
