--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -4,31 +4,6 @@
   <meta charset="UTF-8" />
   <title>Cancelamentos - Grupo DV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-  <!-- Configs globais -->
-  <script src="config.js"></script>
-
-  <!-- Guard de autenticação usando CONFIG.WEBAPP -->
-  <script>
-    (async ()=>{
-      function goLogin(){ location.href = 'login.html?next='+encodeURIComponent(location.pathname.split('/').pop()); }
-      const WEBAPP = (window.CONFIG && window.CONFIG.WEBAPP);
-      if(!WEBAPP){ console.error('CONFIG.WEBAPP não definido em config.js'); goLogin(); return; }
-      const token = localStorage.getItem('auth_token'); if(!token){ goLogin(); return; }
-      try{
-        const url = `${WEBAPP}?fn=me&origin=${encodeURIComponent(location.origin)}`;
-        const r = await fetch(url,{
-          method:'POST',
-          headers:{'Content-Type':'application/json','Authorization':'Bearer '+token},
-          body:JSON.stringify({})
-        });
-        const j = await r.json();
-        if(!j.ok){ localStorage.clear(); goLogin(); return; }
-        window.AUTH_USER = j.user; // {usuario,empresa,perfil,iat,[exp]}
-      }catch{ goLogin(); }
-    })();
-  </script>
-
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -143,35 +118,53 @@
       margin-top: 20px;
     }
 
-    #botaoChatFlutuante {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 45px;
-      height: 45px;
-      background-color: #0B2240;
-      color: white;
-      font-size: 14px;
-      font-weight: bold;
-      font-family: Arial, sans-serif;
-      border: none;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      z-index: 9999;
-      box-shadow: 0 0 8px rgba(11, 34, 64, 0.6), 0 0 12px rgba(11, 34, 64, 0.6);
-      text-shadow: 0 0 2px #fff;
-      transition: transform 0.2s ease;
+ #botaoChatFlutuante {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 45px;
+  height: 45px;
+  background-color: #0B2240; /* cor da logo */
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 9999;
+  box-shadow: 0 0 8px rgba(11, 34, 64, 0.6), 0 0 12px rgba(11, 34, 64, 0.6);
+  text-shadow: 0 0 2px #fff;
+  transition: transform 0.2s ease;
+}
+
+#botaoChatFlutuante:hover {
+  transform: scale(1.1);
+}
+
+
+
+    #botaoChatFlutuante img {
+      width: 28px;
+      height: 28px;
     }
-    #botaoChatFlutuante:hover { transform: scale(1.1); }
-    #botaoChatFlutuante img { width: 28px; height: 28px; }
 
     @media (max-width: 600px) {
-      header { flex-direction: column; text-align: center; }
-      header img { margin: 0 0 10px; }
-      .btn-whatsapp { float: none; width: 100%; margin-top: 10px; }
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      header img {
+        margin: 0 0 10px;
+      }
+      .btn-whatsapp {
+        float: none;
+        width: 100%;
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
@@ -221,11 +214,7 @@
 </div>
 
 <script>
-  // URL dos dados vem do config.js:
-  // defina no config.js -> window.CONFIG.URLS.CANCELAMENTOS = 'https://script.google.com/macros/s/xxxxx/exec';
-  const URL_SCRIPT = (window.CONFIG && window.CONFIG.URLS && window.CONFIG.URLS.CANCELAMENTOS);
-  if(!URL_SCRIPT){ console.error('CONFIG.URLS.CANCELAMENTOS não definido em config.js'); }
-
+  const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycby6kNirWdyaFymip0MFrqTNoItMgqkXJrzwf41Qxe2P1j8BoBILtnyws8o4f5sUdg-T3w/exec';
   let cancelamentos = [];
   let chartCancelamentos = null;
 
@@ -353,78 +342,82 @@
           legend: { display: false },
           title: { display: true, text: '📈 Evolução dos Cancelamentos' }
         },
-        scales: { y: { beginAtZero: true } }
+        scales: {
+          y: { beginAtZero: true }
+        }
       }
     });
   }
 
   function responderPergunta(perguntaManual = null) {
-    const input = document.getElementById("chatInput");
-    const pergunta = perguntaManual || input.value.trim().toLowerCase();
-    if (!pergunta) return;
+  const input = document.getElementById("chatInput");
+  const pergunta = perguntaManual || input.value.trim().toLowerCase();
+  if (!pergunta) return;
 
-    adicionarMensagem("Você", pergunta);
-    input.value = "";
+  adicionarMensagem("Você", pergunta);
+  input.value = "";
 
-    const hoje = new Date();
-    const hojeStr = hoje.toISOString().slice(0, 10);
-    const mesAtual = hojeStr.slice(0, 7);
-    const mesAnterior = new Date(hoje);
-    mesAnterior.setMonth(mesAnterior.getMonth() - 1);
-    const mesAnteriorStr = mesAnterior.toISOString().slice(0, 7);
+  const hoje = new Date();
+  const hojeStr = hoje.toISOString().slice(0, 10);
+  const mesAtual = hojeStr.slice(0, 7);
+  const mesAnterior = new Date(hoje);
+  mesAnterior.setMonth(mesAnterior.getMonth() - 1);
+  const mesAnteriorStr = mesAnterior.toISOString().slice(0, 7);
 
-    const formatarDataEntrada = (frase) => {
-      const regex = /(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{2,4})/;
-      const match = frase.match(regex);
-      if (!match) return null;
-      const [ , dia, mes, ano ] = match;
-      return `${ano.length === 2 ? '20' + ano : ano}-${mes.padStart(2,'0')}-${dia.padStart(2,'0')}`;
-    };
+  const formatarDataEntrada = (frase) => {
+    const regex = /(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{2,4})/;
+    const match = frase.match(regex);
+    if (!match) return null;
+    const [ , dia, mes, ano ] = match;
+    return `${ano.length === 2 ? '20' + ano : ano}-${mes.padStart(2,'0')}-${dia.padStart(2,'0')}`;
+  };
 
-    const dataEncontrada = formatarDataEntrada(pergunta);
-    const empresaMatch = cancelamentos.find(c => pergunta.includes(c.empresa.toLowerCase()));
-    const empresaSelecionada = empresaMatch ? empresaMatch.empresa : null;
+  const dataEncontrada = formatarDataEntrada(pergunta);
+  const empresaMatch = cancelamentos.find(c => pergunta.includes(c.empresa.toLowerCase()));
+  const empresaSelecionada = empresaMatch ? empresaMatch.empresa : null;
 
-    const palavraChaveMatch = ["rodízio", "rodizio", "pizza", "bebida", "hamburguer", "combo", "entrada"]
-      .filter(p => pergunta.includes(p));
-    
-    const filtrados = cancelamentos.filter(c => {
-      if (dataEncontrada && c.data !== dataEncontrada) return false;
-      if (empresaSelecionada && c.empresa !== empresaSelecionada) return false;
-      if (palavraChaveMatch.length && !palavraChaveMatch.some(p => c.item.toLowerCase().includes(p))) return false;
-      return true;
-    });
+  const palavraChaveMatch = ["rodízio", "rodizio", "pizza", "bebida", "hamburguer", "combo", "entrada"]
+    .filter(p => pergunta.includes(p));
+  
+  const filtrados = cancelamentos.filter(c => {
+    if (dataEncontrada && c.data !== dataEncontrada) return false;
+    if (empresaSelecionada && c.empresa !== empresaSelecionada) return false;
+    if (palavraChaveMatch.length && !palavraChaveMatch.some(p => c.item.toLowerCase().includes(p))) return false;
+    return true;
+  });
 
-    let resposta = "Desculpe, não estendi, Nalbert está me configurando ainda.";
+  let resposta = "Desculpe, não estendi, Nalbert está me configurando ainda.";
 
-    if (pergunta.includes("últimos") || pergunta.includes("recentes")) {
-      const ultimos = cancelamentos.slice(-5).reverse().map(c =>
-        `• ${formatarDataBR(c.data)} - ${c.empresa}: ${c.item} (${formatarMoeda(c.valor)})`);
-      resposta = "🕒 Últimos 5 registros de cancelamentos:\n" + ultimos.join("\n");
-    }
-    else if (filtrados.length && pergunta.includes("cancelado")) {
-      const total = filtrados.reduce((acc, c) => acc + c.valor, 0);
-      resposta = `Total cancelado${empresaSelecionada ? ` pela empresa ${empresaSelecionada}` : ""}${dataEncontrada ? ` em ${formatarDataBR(dataEncontrada)}` : ""}${palavraChaveMatch.length ? ` com "${palavraChaveMatch[0]}"` : ""}: ${formatarMoeda(total)}.`;
-    }
-    else if (filtrados.length && (pergunta.includes("item") || pergunta.includes("quais"))) {
-      const itens = filtrados.map(c => `• ${c.item} (${formatarMoeda(c.valor)})`);
-      resposta = `Itens cancelados${empresaSelecionada ? ` pela empresa ${empresaSelecionada}` : ""}${dataEncontrada ? ` em ${formatarDataBR(dataEncontrada)}` : ""}:\n${itens.join('\n')}`;
-    }
-    else if (/cancelado.*mes.*passado/.test(pergunta)) {
-      const total = cancelamentos.filter(c => c.data.startsWith(mesAnteriorStr)).reduce((acc, cur) => acc + cur.valor, 0);
-      resposta = `No mês passado foram cancelados ${formatarMoeda(total)}.`;
-    }
-    else if (/cancelado.*este.*mes/.test(pergunta)) {
-      const total = cancelamentos.filter(c => c.data.startsWith(mesAtual)).reduce((acc, cur) => acc + cur.valor, 0);
-      resposta = `Neste mês foram cancelados ${formatarMoeda(total)}.`;
-    }
-    else if (/cancelamento.*hoje/.test(pergunta)) {
-      const totalHoje = cancelamentos.filter(c => c.data === hojeStr).reduce((acc, c) => acc + c.valor, 0);
-      resposta = `Hoje foram cancelados ${formatarMoeda(totalHoje)}.`;
-    }
-
-    adicionarMensagem("Assistente", resposta);
+  if (pergunta.includes("últimos") || pergunta.includes("recentes")) {
+    const ultimos = cancelamentos.slice(-5).reverse().map(c =>
+      `• ${formatarDataBR(c.data)} - ${c.empresa}: ${c.item} (${formatarMoeda(c.valor)})`);
+    resposta = "🕒 Últimos 5 registros de cancelamentos:\n" + ultimos.join("\n");
   }
+  else if (filtrados.length && pergunta.includes("cancelado")) {
+    const total = filtrados.reduce((acc, c) => acc + c.valor, 0);
+    resposta = `Total cancelado${empresaSelecionada ? ` pela empresa ${empresaSelecionada}` : ""}${dataEncontrada ? ` em ${formatarDataBR(dataEncontrada)}` : ""}${palavraChaveMatch.length ? ` com "${palavraChaveMatch[0]}"` : ""}: ${formatarMoeda(total)}.`;
+  }
+  else if (filtrados.length && (pergunta.includes("item") || pergunta.includes("quais"))) {
+    const itens = filtrados.map(c => `• ${c.item} (${formatarMoeda(c.valor)})`);
+    resposta = `Itens cancelados${empresaSelecionada ? ` pela empresa ${empresaSelecionada}` : ""}${dataEncontrada ? ` em ${formatarDataBR(dataEncontrada)}` : ""}:\n${itens.join('\n')}`;
+  }
+  else if (/cancelado.*mes.*passado/.test(pergunta)) {
+    const total = cancelamentos.filter(c => c.data.startsWith(mesAnteriorStr)).reduce((acc, cur) => acc + cur.valor, 0);
+    resposta = `No mês passado foram cancelados ${formatarMoeda(total)}.`;
+  }
+  else if (/cancelado.*este.*mes/.test(pergunta)) {
+    const total = cancelamentos.filter(c => c.data.startsWith(mesAtual)).reduce((acc, cur) => acc + cur.valor, 0);
+    resposta = `Neste mês foram cancelados ${formatarMoeda(total)}.`;
+  }
+  else if (/cancelamento.*hoje/.test(pergunta)) {
+    const totalHoje = cancelamentos.filter(c => c.data === hojeStr).reduce((acc, c) => acc + c.valor, 0);
+    resposta = `Hoje foram cancelados ${formatarMoeda(totalHoje)}.`;
+  }
+
+  adicionarMensagem("Assistente", resposta);
+}
+
+
 
   function adicionarMensagem(remetente, mensagem) {
     const chat = document.getElementById("chatMensagens");
@@ -435,36 +428,37 @@
     chat.scrollTop = chat.scrollHeight;
   }
 
-  function abrirAssistente() {
-    document.getElementById("chatAssistente").style.display = "flex";
-    document.getElementById("botaoChatFlutuante").style.display = "none";
-    const chat = document.getElementById("chatMensagens");
-    if (!document.getElementById("botoesSugestoes")) {
-      const sugestoes = [
-        "Quanto foi cancelado hoje?",
-        "Cancelados do Mercatto no dia 01/08/2025",
-        "Quais itens foram cancelados em 25/07?",
-        "Total cancelado com rodízio",
-        "Últimos cancelamentos"
-      ];
-      const div = document.createElement("div");
-      div.id = "botoesSugestoes";
-      div.style.marginBottom = "10px";
-      sugestoes.forEach(texto => {
-        const btn = document.createElement("button");
-        btn.textContent = texto;
-        btn.style.margin = "2px";
-        btn.style.padding = "6px 10px";
-        btn.style.borderRadius = "6px";
-        btn.style.border = "1px solid #ccc";
-        btn.style.cursor = "pointer";
-        btn.style.fontSize = "12px";
-        btn.onclick = () => responderPergunta(texto.toLowerCase());
-        div.appendChild(btn);
-      });
-      chat.appendChild(div);
-    }
+ function abrirAssistente() {
+  document.getElementById("chatAssistente").style.display = "flex";
+  document.getElementById("botaoChatFlutuante").style.display = "none";
+  const chat = document.getElementById("chatMensagens");
+  if (!document.getElementById("botoesSugestoes")) {
+    const sugestoes = [
+      "Quanto foi cancelado hoje?",
+      "Cancelados do Mercatto no dia 01/08/2025",
+      "Quais itens foram cancelados em 25/07?",
+      "Total cancelado com rodízio",
+      "Últimos cancelamentos"
+    ];
+    const div = document.createElement("div");
+    div.id = "botoesSugestoes";
+    div.style.marginBottom = "10px";
+    sugestoes.forEach(texto => {
+      const btn = document.createElement("button");
+      btn.textContent = texto;
+      btn.style.margin = "2px";
+      btn.style.padding = "6px 10px";
+      btn.style.borderRadius = "6px";
+      btn.style.border = "1px solid #ccc";
+      btn.style.cursor = "pointer";
+      btn.style.fontSize = "12px";
+      btn.onclick = () => responderPergunta(texto.toLowerCase());
+      div.appendChild(btn);
+    });
+    chat.appendChild(div);
   }
+}
+
 
   function fecharAssistente() {
     document.getElementById("chatAssistente").style.display = "none";
